# nca-package

./: .coverage  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nca/: __init__.py  nca.py  nca_bottleneck.py  nca_outliers.py  nca_output.py  nca_plotly.py  nca_plots.py  nca_power.py  nca_random.py  nca_summary.py  nca_tests.py  on_attach.py  p_above.py  p_bottleneck.py  p_bottleneck_table.py  p_ceiling.py  p_confidence.py  p_constants.py  p_fit.py  p_graphics.py  p_ineffs.py  p_loop_data.py  p_nca_c_lp.py  p_nca_ce_cm.py  p_nca_ce_cm_conf.py  p_nca_ce_fdh.py  p_nca_ce_fdhi.py  p_nca_ce_lfdh.py  p_nca_ce_vrs.py  p_nca_cols.py  p_nca_cr_cm.py  p_nca_cr_cm_conf.py  p_nca_cr_fdh.py  p_nca_cr_fdhi.py  p_nca_cr_vrs.py  p_nca_ct_fdh.py  p_nca_lh.py  p_nca_ols.py  p_nca_qr.py  p_nca_sfa.py  (+4 more)
nca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_ceiling_techniques.py  test_integration.py  test_nca_analysis.py  test_nca_outliers.py  test_nca_output_params.py  test_nca_power.py  test_nca_random.py  test_p_ceiling.py  test_pdf_export.py
